RESOLVED FIXED38066
ASSERT(willBeComposited == needsToBeComposited(layer)); on gmail.com
https://bugs.webkit.org/show_bug.cgi?id=38066
Summary ASSERT(willBeComposited == needsToBeComposited(layer)); on gmail.com
Simon Fraser (smfr)
Reported 2010-04-23 17:26:46 PDT
Hit ASSERT(willBeComposited == needsToBeComposited(layer)); loading gmail.com
Attachments
Patch (4.31 KB, patch)
2010-04-23 17:45 PDT, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2010-04-23 17:45:31 PDT
Simon Fraser (smfr)
Comment 2 2010-04-23 17:52:53 PDT
Note You need to log in before you can comment on or make changes to this bug.