2010-04-23  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        ASSERT(willBeComposited == needsToBeComposited(layer)); on gmail.com
        https://bugs.webkit.org/show_bug.cgi?id=38066

        When a layer goes into compositing mode because it has a negative z-index child that is going
        into compositing mode, then set willBeComposited to true. Also add another assertion to catch
        any other cases where the state of willBeComposited is mismanaged.

        Test: compositing/composited-negative-zindex-child.html

        * rendering/RenderLayerCompositor.cpp:
        (WebCore::RenderLayerCompositor::computeCompositingRequirements):

Canonical link: https://commits.webkit.org/49483@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58203 268f45cc-cd09-0410-ab3c-d52691b4dbfc